@@ -1,6 +1,6 @@
 # "Make.test-cflat"
 #	vi: ft=automake
-#	$Id: Make.test-cflat,v 1.5 2006/11/27 08:29:21 fang Exp $
+#	$Id: Make.test-cflat,v 1.5.4.1 2007/01/17 00:11:54 fang Exp $
 # This is just a portion of the Make.test-tail template included by
 # Makefile.am's in the test/ directory subtree.  
 # This depends on variables defined in Make.test-tail, and thus, 
@@ -120,7 +120,7 @@ endif
 HACKT_CFLAT_LVS_SCRIPT = \
 	srcfile=$(srcdir)/$*.hac ; \
 	type=`$(CAT) $$srcfile | $(GREP) "@hflat-type@" | $(HEAD) -n1 | \
-		$(SED) 's/^.*-type@[ \t]*//g' | $(SED) 's/\"//g'` ; \
+		$(SED) -e 's/^.*-type@[ \t]*//g' -e 's/\"//g'` ; \
 	if test -n "$$type" ; then \
 		$(ECHO_CFLAT_LVS_TYPE_COMMAND) ; \
 		$(HACKT_CFLAT_LVS_EXE) -t $$type $< > $@ 2>&1 ; \
@@ -150,7 +150,7 @@ endif
 .haco-a.lvssprs:
 	@srcfile=$(srcdir)/$*.hac ; \
 	type=`$(CAT) $$srcfile | $(GREP) "@hflat-type@" | $(HEAD) -n1 | \
-		$(SED) 's/^.*-type@[ \t]*//g' | $(SED) 's/\"//g'` ; \
+		$(SED) -e 's/^.*-type@[ \t]*//g' -e 's/\"//g'` ; \
 	if test -n "$$type" ; then \
 		$(ECHO_CFLAT_LVS_SIZE_TYPE_COMMAND) ; \
 		$(HACKT_CFLAT_LVS_EXE) -fsizes -t $$type $< > $@ ; \
