@@ -1,6 +1,6 @@
 # "Make.test-chpsim"
 #	vi: ft=automake
-#	$Id: Make.test-chpsim,v 1.1.2.6 2007/01/15 04:30:35 fang Exp $
+#	$Id: Make.test-chpsim,v 1.1.2.7 2007/01/17 00:11:55 fang Exp $
 # This is just a portion of the Make.test-tail template included by
 # Makefile.am's in the test/ directory subtree.  
 # This depends on variables defined in Make.test-tail, and thus, 
@@ -73,6 +73,8 @@ AUTO_DEPENDS += chpsimalloctest.autodepend
 
 # TODO: support checkpointing in test cases that pass
 # NOTE: EXTRACT_HACO_PIPE is defined in "Make.test-prsim"
+# TODO: extract additional command-line flags from the source script
+#	maybe using @chpsim-flags@ as a match pattern
 CHPSIMRC_TEST_SCRIPT = \
 	obj=`$(CAT) $< | $(EXTRACT_HACO_PIPE)` ; \
 	$(ECHO) "$(HACKT_CHPSIM_EXE) -b -I$(srcdir) $$obj < $<" ; \
