@@ -3,7 +3,7 @@
 # a template makefile for testing, to be included in recursive invocations
 # Include this Makefile at the end of every subdirectoy's Makefile.am.
 # The counterpart header Makefile is "test/Make.test-head".
-#	$Id: Make.test-tail,v 1.64.2.3 2006/12/14 22:35:44 fang Exp $
+#	$Id: Make.test-tail,v 1.64.2.4 2007/01/17 00:11:58 fang Exp $
 
 HACKT_EXE = $(top_builddir)/src/hackt
 PARSE_TEST_EXE = $(HACKT_EXE) parse_test
@@ -45,8 +45,10 @@ HACO_FLAGS += -I$(srcdir)
 # caution: concurrent builds of .haco and .depend may clobber this
 # if executable did not successfully build, then skip.
 
-HAC_DEPEND_FILTER = $(SED) '/haco:/s|^$(srcdir)\/||g' | \
-	$(SED) 's/haco:/haco $@:/g'
+HAC_DEPEND_FILTER = $(SED) -e '/haco:/s|^$(srcdir)\/||g' \
+	-e 's/haco:/haco $@:/g'
+# the following works for VPATH, but need to test for srcdir = .
+# -e 's|$(srcdir)|$$(srcdir)|g'
 
 # arg, need to escape the friggin' hash!
 SHELL_INTERPRETER = "\#!$(SHELL)"
@@ -76,6 +78,15 @@ ECHO_FILTERED = $(ECHO) "Filtered $@"
 else
 ECHO_FILTERED = :
 endif
+
+# Each run-commands script should include the command to invoke
+# for loading the object, e.g.: hackt prsim foo.haco-a
+# This rule should deduce the input object from the source script.  
+
+# useful for extracting object file name from a source script
+EXTRACT_HACO_PIPE = $(GREP) "^\#" | $(GREP) "@haco@" | $(HEAD) -n1 | \
+	$(AWK) '{ntok=split($$0, toks); print toks[ntok]; }'
+
 
 BOGUS_TESTS =
 BOGUS_TARGETS =
