@@ -1,5 +1,11 @@
 "ChangeLog"
 
+2007-01-16	David Fang	<fangism@users.sourceforge.net>
+
+	* HACKT-00-01-04-main-00-80-63-chpsim-01-44:
+	  Make.stddef and global Makefile.am clean-ups for maintainability.  
+
+
 2006-12-01	David Fang	<fangism@users.sourceforge.net>
 
 	* HACKT-00-01-04-main-00-80-63-merged-channel-02-09:
